Refactor(backend) item model and API to remove type-specific fields
